# kinova_controller_taeho

controller_interface/: README.md  package.xml  setup.cfg  setup.py
controller_interface/controller_interface/: RAL_friction_observer.ipynb  select_controller.ipynb  test.ipynb
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
kinova_controller/: CMakeLists.txt  README.md  package.xml
kinova_controller/config/: kinova_controller_config.yaml
kinova_controller/include/kinova_controller/controller/: controller.hpp  controller_gain.hpp
kinova_controller/include/kinova_controller/data/: controller_logging_data.hpp  controller_state.hpp  coulomb_observer_state.hpp  energy_tank.hpp  energy_tank_data.hpp  gen3_state.hpp  mcp_ep_visualization.hpp  mujoco_apply_force.hpp  nominal_plant.hpp  opt_data.hpp  robot_state.hpp
kinova_controller/include/kinova_controller/energy_tank/: energy_tank.hpp  energy_tank_base.hpp
kinova_controller/include/kinova_controller/filter/: lpf.hpp
kinova_controller/include/kinova_controller/robot/: kinova_gen3.hpp  kinova_gen3_base.hpp  kinova_gen3_simulation.hpp
kinova_controller/include/kinova_controller/sensors/: ati_ft.hpp
kinova_controller/include/kortex_api/common/: convert_joint_position.hpp
kinova_controller/include/mujoco-2.3.1/simulate/: simulate.cc  simulate.h
kinova_controller/include/node/: kinova_controller_node.hpp
kinova_controller/include/utils/: lifecycle_autostart.hpp  memory_lock.hpp  process_settings.hpp  rt_thread.hpp
kinova_controller/launch/: run.launch.py
kinova_controller/ral_data/: L1 copy.txt  PD copy.txt  non copy.txt  non.txt  non_2.txt  task_plot.py
kinova_controller/ral_data/joint_traj/: joint_plot.py
kinova_controller/ral_data/joint_traj_collision/: joint_plot.py
kinova_controller/src/: main.cpp
kinova_controller/src/kinova_controller/controller/: controller.cpp  controller_gain.cpp
kinova_controller/src/kinova_controller/data/: controller_logging_data.cpp  controller_state.cpp  energy_tank.cpp  energy_tank_data.cpp  gen3_state.cpp  mcp_ep_visualization.cpp  mujoco_apply_force.cpp  nominal_plant.cpp  opt_data.cpp  robot_state.cpp
kinova_controller/src/kinova_controller/energy_tank/: energy_tank.cpp  energy_tank_base.cpp
kinova_controller/src/kinova_controller/filter/: lpf.cpp
kinova_controller/src/kinova_controller/robot/: kinova_gen3.cpp  kinova_gen3_simulation.cpp
kinova_controller/src/kinova_controller/sensors/: ati_ft.cpp
kinova_controller/src/node/: kinova_controller_node.cpp
kinova_controller/src/utils/: memory_lock.cpp  rt_thread.cpp
kinova_controller/tro_data/application/: task_plot.py
kinova_controller/tro_data/collision_tracking/: task_plot.py
kinova_controller/tro_data/square_trajectory_tracking/: task_plot.py
robot_model/: CMakeLists.txt  README.md  package.xml
robot_model/kinova_gen3/luca_model/: kinova_gen3.urdf
robot_model/kinova_gen3/mujoco_dual_arm_model/: dual_kinova_gen3.xml
robot_model/kinova_gen3/mujoco_dual_arm_model/gen3/: assets.xml  kinova_gen3_arm_left.xml  kinova_gen3_arm_left_rigid.xml  kinova_gen3_arm_right.xml  kinova_gen3_arm_right_rigid.xml
robot_model/kinova_gen3/mujoco_dual_arm_model/gen3/actuators/: torque_actuator.xml
robot_model/kinova_gen3/mujoco_dual_arm_model/gen3/sensors/: gen3_sensor.xml
robot_model/kinova_gen3/mujoco_dual_arm_model/mesh/collision/: Convex_Base_Link.stl  Convex_Bracelet_Link.stl  Convex_SphericalWrist2_Link.stl
robot_model/kinova_gen3/mujoco_dual_arm_model/mesh/other/: ATI_Mini85.stl
robot_model/kinova_gen3/mujoco_dual_arm_model/mesh/visual/: ForeArm_Link.stl  Shoulder_Link.stl  SphericalWrist2_Link.stl
robot_model/kinova_gen3/mujoco_dual_arm_model/other/: simple_scene.xml
robot_model/kinova_gen3/mujoco_dual_arm_model/other/environment/: environment_actuation.xml  environment_body.xml
robot_model/kinova_gen3/mujoco_model/: kinova_gen3.xml  kinova_gen3_2f85.xml  kinova_gen3_2f85_reduced.xml
robot_model/kinova_gen3/mujoco_model/gen3/: assets.xml  kinova_gen3_arm.xml  kinova_gen3_arm_rigid.xml  kinova_gen3_arm_rigid_2f85.xml  kinova_gen3_arm_rigid_2f85_reduced.xml
robot_model/kinova_gen3/mujoco_model/gen3/actuators/: torque_actuator.xml
robot_model/kinova_gen3/mujoco_model/gripper/: 2f85.xml  2f85_actuator.xml  2f85_asset.xml  2f85_asset_reduced.xml  2f85_reduced.xml
robot_model/kinova_gen3/mujoco_model/mesh/collision/: Convex_Shoulder_Link.stl  Convex_SphericalWrist1_Link.stl
robot_model/kinova_gen3/mujoco_model/mesh/visual/: HalfArm2_Link.stl  SphericalWrist1_Link.stl
robot_model/kinova_gen3/mujoco_model/mesh/visual_mcp_ep/: Bracelet_Link.stl  ForeArm_Link.stl  HalfArm1_Link.stl  HalfArm2_Link.stl  Shoulder_Link.stl  SphericalWrist1_Link.stl  SphericalWrist2_Link.stl
robot_model/kinova_gen3/mujoco_model/other/: simple_scene.xml
robot_model/kinova_gen3/pinocchio_model/meshes/visual/: Bracelet_Link.stl  (+1 more)
robot_model/kinova_gen3/pinocchio_model/moveit_urdf/: kinova.urdf  kinova_dual.urdf
robot_model/kinova_gen3/pinocchio_model/pinocchio_urdf/: kinova.urdf  kinova_conti.urdf  kinova_conti_2f85.urdf  kinova_dual.urdf  kinova_dual_conti.urdf
robot_model/kuka_lwr/mujoco_model/: kuka_lwr.xml
robot_model/kuka_lwr/mujoco_model/lwr/: assets.xml  kuka_lwr_arm_rigid.xml
robot_model/kuka_lwr/mujoco_model/other/: simple_scene.xml
robot_model/kuka_lwr/pinocchio_model/: kuka_lwr.urdf
robot_model/panda/luca_model/: panda.urdf
robot_model/panda/mujoco_model/: franka_panda_flexible.xml  franka_panda_rigid.xml  pibot_right_arm_luca.urdf
robot_model/panda/mujoco_model/other/: simple_scene.xml
robot_model/panda/mujoco_model/panda/: arm_no_gripper.xml  arm_no_gripper_backup.xml  arm_with_gripper_rigid.xml  assets.xml
robot_model/pibot_7dof_arm/mujoco_model/: pibot_right_arm.xml
robot_model/pibot_7dof_arm/pinocchio_model/: pibot_right_arm.gv  pibot_right_arm.urdf
robot_model/robotiq_2f85/: 2f85_fixed.xml  2f85_fixed_reduced.xml  convert.py
robot_model/robotiq_2f85/2f85.urdf/: robotiq_2f85_base_mount.urdf
(+44 files in other folders)
