<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tjdnr7117@gmail.com">wookie</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>opt_ctrl_msgs</depend>
  <depend>robot_state_msgs</depend>
  <depend>mcp_ep_msgs</depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
